--- a/.htaccess
+++ b/.htaccess
@@ -10,9 +10,9 @@ RewriteBase /
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteRule ^([a-z-]+)$ routes.php?module=Site&class=$1 [NC,L]
-RewriteRule ^([a-z-]+)/([a-z-]+)$ routes.php?module=Site&class=$1&method=$2 [NC,L]
-RewriteRule ^([a-z-]+)/([a-z-]+)/([0-9]+)$ routes.php?module=Site&class=$1&method=$2&param=$3 [NC,L]
-RewriteRule ^([a-z-]+)/([a-z-]+)/([0-9]+)/([a-z-0-9-]+)$ routes.php?module=Site&class=$1&method=$2&param=$3 [NC,L]
+RewriteRule ^([a-z-]+)/([a-z-]+)$ routes.php?module=site&class=$1&method=$2 [NC,L]
+RewriteRule ^([a-z-]+)/([a-z-]+)/([0-9]+)$ routes.php?module=site&class=$1&method=$2&param=$3 [NC,L]
+RewriteRule ^([a-z-]+)/([a-z-]+)/([0-9]+)/([a-z-0-9-]+)$ routes.php?module=site&class=$1&method=$2&param=$3 [NC,L]
 
 RewriteCond %{REQUEST_FILENAME} -d
 RewriteRule ^/?$ routes.php?module=site&class=index [NC,L]
