--- a/.htaccess
+++ b/.htaccess
@@ -9,7 +9,7 @@ RewriteBase /
 
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME} !-f
-RewriteRule ^([a-z-]+)$ routes.php?module=Site&class=$1 [NC,L]
+RewriteRule ^([a-z-]+)$ routes.php?module=site&class=$1 [NC,L]
 RewriteRule ^([a-z-]+)/([a-z-]+)$ routes.php?module=site&class=$1&method=$2 [NC,L]
 RewriteRule ^([a-z-]+)/([a-z-]+)/([0-9]+)$ routes.php?module=site&class=$1&method=$2&param=$3 [NC,L]
 RewriteRule ^([a-z-]+)/([a-z-]+)/([0-9]+)/([a-z-0-9-]+)$ routes.php?module=site&class=$1&method=$2&param=$3 [NC,L]
