--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "icelus/icelus",
+    "name": "brunoosilvas/icelus",
     "description": "mvc framework for PHP",
     "keywords": [
         "icelus",
