--- a/composer.json
+++ b/composer.json
@@ -15,9 +15,7 @@
         }
     ],
     "require": {
-        "php": "^7.2",
-        "twig/twig": "^2.10",
-        "symfony/polyfill-mbstring": "^1.10"
+        "php": "^7.3"        
     },
     "autoload": {
         "psr-4": {
